# Resistor-Reader

./: .cursorrules  .gitignore  AGENTS.md  LICENSE  README-ssh.md  README.md  config.yaml  pi_usb_gadget.yml  pyproject.toml  rreader.py  rreader_test.py
docs/: ARCHITECTURE.md  COLOR_SPEC.md  READING_RESISTORS.md  STEPS.md  WORKFLOW.md  web-visualization-design.md
hardware/dxfs/: back.dxf  background.dxf  backstop.dxf  bed.dxf  bottom.dxf  bottom_front.dxf  camera_mount.dxf  left_side.dxf  right_side.dxf  top.dxf  top_front.dxf
notebooks/: interactive_pipeline.ipynb
resistor_pictures/: resistors.csv
resistor_reader/: __init__.py  bands.py  debug_montage.py  gather_test_data.py  logging_utils.py  main.py  models.py  orchestrator.py  preprocess.py  resolve.py  roi.py  take_picture.py
scripts/: live_trackbar.py
tests/: __init__.py  test.yaml  test_bands.py  test_debug_montage.py  test_orchestrator.py  test_resolve.py  test_roi.py  test_segment_columns.py
yocto/: README.md  manifest.xml
yocto/layers/meta-resistor-reader/conf/: layer.conf
yocto/layers/meta-resistor-reader/recipes-apps/resistor-reader/: resistor-reader.bb
yocto/layers/meta-resistor-reader/recipes-core/images/: resistor-reader-image.bb
yocto/layers/meta-resistor-reader/recipes-core/usb-gadget/: usb-gadget.bb
yocto/layers/meta-resistor-reader/recipes-core/usb-gadget/files/: usb-gadget.service  usb-gadget.sh
