[build-system]
requires = ["flit-core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "resistor_reader"
version = "0.1.0"
description = "A project to read the color code on resistors"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "Pillow",
    "numpy",
    "scipy",
    "opencv-python",
]

[tool.uv]
dev-dependencies = ["pytest"]

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]
